# ppw

./: CMakeLists.txt  README.md
api/: ppw_fat_model.h  ppw_fat_types.h  ppw_ipc_msg.h  ppw_ipc_shm.h  ppw_mcursor.h
code/fatmodel/: fm_core.cpp  fm_defs.h  fm_tests.cpp  fm_utils.cpp  fm_utils.h
code/ipc/: ipc_msg.cpp  ipc_shm.cpp
